[gd_scene load_steps=17 format=3 uid="uid://dutovknmk2o2x"]

[ext_resource type="Script" path="res://Scripts/menu.gd" id="1_ujbjl"]
[ext_resource type="Texture2D" uid="uid://58y2nkwh20yg" path="res://Imagenes/menu.jpg" id="1_v2xrl"]
[ext_resource type="AudioStream" uid="uid://bf5y48ynee2k" path="res://Musica/musica menu.mp3" id="3_7h2xt"]
[ext_resource type="AudioStream" uid="uid://dof1bi6wbgrah" path="res://Sonido/bootonclik.mp3" id="4_f1sus"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8x2da"]
bg_color = Color(0.196078, 0.196078, 0.196078, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fgmdx"]
bg_color = Color(0.823529, 0, 0.0980392, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pyxy1"]
bg_color = Color(0.0784314, 0.0784314, 0.0784314, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sjawk"]
bg_color = Color(0.196078, 0.196078, 0.196078, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_08tp2"]
bg_color = Color(0.823529, 0, 0.0980392, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7rhs1"]
bg_color = Color(0.0784314, 0.0784314, 0.0784314, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_473nb"]
bg_color = Color(0.196078, 0.196078, 0.196078, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_47p2u"]
bg_color = Color(0.823529, 0, 0.0980392, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r62xe"]
bg_color = Color(0.0784314, 0.0784314, 0.0784314, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cc2wx"]
bg_color = Color(0.194349, 0.194349, 0.194349, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_thb3g"]
bg_color = Color(0.823529, 0, 0.0980392, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1ywmb"]
bg_color = Color(0.0784314, 0.0784314, 0.0784314, 1)

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ujbjl")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.548963, 0.548963, 0.548963, 1)

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_v2xrl")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.5
offset_top = -70.0
offset_right = 120.5
offset_bottom = 70.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12

[node name="JUGAR" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
theme_override_styles/hover = SubResource("StyleBoxFlat_8x2da")
theme_override_styles/pressed = SubResource("StyleBoxFlat_fgmdx")
theme_override_styles/normal = SubResource("StyleBoxFlat_pyxy1")
text = "JUGAR"

[node name="INSTRUCCIONES" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
theme_override_styles/hover = SubResource("StyleBoxFlat_sjawk")
theme_override_styles/pressed = SubResource("StyleBoxFlat_08tp2")
theme_override_styles/normal = SubResource("StyleBoxFlat_7rhs1")
text = "INSTRUCCIONES"

[node name="CREDITOS" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
theme_override_styles/hover = SubResource("StyleBoxFlat_473nb")
theme_override_styles/pressed = SubResource("StyleBoxFlat_47p2u")
theme_override_styles/normal = SubResource("StyleBoxFlat_r62xe")
text = "CREDITOS"

[node name="SALIR" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
theme_override_styles/hover = SubResource("StyleBoxFlat_cc2wx")
theme_override_styles/pressed = SubResource("StyleBoxFlat_thb3g")
theme_override_styles/normal = SubResource("StyleBoxFlat_1ywmb")
text = "SALIR"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="VBoxContainer/SALIR"]
stream = ExtResource("4_f1sus")
volume_db = 7.495

[node name="sonido menu" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_7h2xt")
volume_db = 0.577
autoplay = true

[connection signal="pressed" from="VBoxContainer/JUGAR" to="." method="_on_jugar_pressed"]
[connection signal="pressed" from="VBoxContainer/JUGAR" to="VBoxContainer/JUGAR" method="_on_pressed"]
[connection signal="pressed" from="VBoxContainer/INSTRUCCIONES" to="." method="_on_instrucciones_pressed"]
[connection signal="pressed" from="VBoxContainer/CREDITOS" to="." method="_on_creditos_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/SALIR" to="." method="_on_salir_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/SALIR" to="." method="_on_salir_pressed"]
